# api-tester

./: README.md  SKILL.md  pyproject.toml
agents/: openai.yaml
api_tester/: __init__.py  __main__.py  cli.py
references/: response-format.md  usage.md
scripts/: api_request.py  package_skill.py
tests/: test_cli.py
