[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "api-tester"
version = "0.1.0"
description = "A simple CLI for testing HTTP APIs."
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[project.scripts]
api-tester = "api_tester.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
